@@ -1,3 +1,8 @@
+2005-01-12  Geoff Norton  <gnorton@customerdna.com>
+
+        * gc-profiler.c:  Rename write to prof_write to avoid name clash on 
+        OSX.
+
 2005-01-09  Ben Maurer  <bmaurer@ximian.com>
 
 	* *: Initial Import.
